WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
244384
CSSCursorImageValue should use WeakHashSet<SVGCursorElement> instead of HashSet<SVGCursorElement*>
https://bugs.webkit.org/show_bug.cgi?id=244384
Summary
CSSCursorImageValue should use WeakHashSet<SVGCursorElement> instead of HashS...
Ryosuke Niwa
Reported
2022-08-26 01:05:23 PDT
Don't use raw pointers.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2022-08-26 01:07:42 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3698
EWS
Comment 2
2022-08-26 12:51:41 PDT
Committed
253833@main
(a8352356317a): <
https://commits.webkit.org/253833@main
> Reviewed commits have been landed. Closing PR #3698 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-08-26 12:52:17 PDT
<
rdar://problem/99199172
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug