CSSCursorImageValue should use WeakHashSet<SVGCursorElement> instead of HashSet<SVGCursorElement*> https://bugs.webkit.org/show_bug.cgi?id=244384

Reviewed by Said Abou-Hallawa.

* Source/WebCore/css/CSSCursorImageValue.cpp:
(WebCore::CSSCursorImageValue::~CSSCursorImageValue):
(WebCore::CSSCursorImageValue::updateCursorElement):
(WebCore::CSSCursorImageValue::cursorElementRemoved):
* Source/WebCore/css/CSSCursorImageValue.h:

Canonical link: https://commits.webkit.org/253833@main